--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,19 @@
 version: '3.8'
-
 services:
-  rsync:
+  rsync: # Asegúrate de que este es el nombre de tu servicio
     build: .
     container_name: rsync_docker
     env_file:
-      - .env
+      - .env # Esto carga las variables de tu .env
     volumes:
+      # Si copias los archivos del código fuente:
       - ./main.py:/app/main.py
       - ./managers:/app/managers
       - ./utils:/app/utils
-      - /home/rotoapanta/Documentos/raw-data-pycam:/data
-      - ./logs:/logs
+      # Clave SSH
       - ~/.ssh/id_rsa_rsync:/root/.ssh/id_rsa:ro
-    restart: unless-stopped
+      # Mapeo del volumen de datos (usando la variable del .env)
+      - ${RSYNC_DEST_HOST_PATH}:/data
+      # Logs
+      - ./logs:/logs
+    restart: unless-stopped # O 'always'
