Update telegram_utils.py and main.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
   rsync: # Asegúrate de que este es el nombre de tu servicio
     build: .
+    network_mode: host  # ESTA LÍNEA HACE LA MAGIA
     container_name: rsync_docker
     env_file:
       - .env # Esto carga las variables de tu .env
@@ -16,4 +17,5 @@ services:
       - ${RSYNC_DEST_HOST_PATH}:/data
       # Logs
       - ./logs:/logs
+      - ./system_info_test.py:/app/system_info_test.py
     restart: unless-stopped # O 'always'
